@@ -381,19 +381,14 @@ py:match
 
   >>> print render_genshi("""\
   ... <div xmlns="http://www.w3.org/1999/xhtml"
-  ...       xmlns:py="http://genshi.edgewall.org">
-  ... <ul py:def="rendermenu(menu)" py:if="menu">
-  ...   Menu entry
-  ...   ${rendermenu([])}
-  ... </ul>
+  ...     xmlns:py="http://genshi.edgewall.org">
+  ...   <ul py:def="rendermenu(menu)" py:if="menu">
+  ...     ${rendermenu([])}
+  ...   </ul>
   ... </div>""")
-  <div xmlns="http://www.w3.org/1999/xhtml"
-        xmlns:py="http://genshi.edgewall.org">
-  <ul py:def="rendermenu(menu)" py:if="menu">
-    Menu entry
-  </ul>
+  <div>
   </div>
-
+  
 :: Slightly more complex recursive function calls
  
   >>> print render_genshi("""\
@@ -404,18 +399,23 @@ py:match
   ...         py:attrs="{'class' : entry['current'] and 'current' or None}">
   ...       <a py:attrs="dict(href=entry['url'])"
   ...          py:content="entry['title']">Merken</a>
-  ...       
   ...       ${rendermenu(entry.get('children', []))}
   ...     </li>
   ...   </ul>
-  ...   ${rendermenu(menu))}
+  ...   ${rendermenu(menu)}
   ... </div>""", menu=[dict(title=u"Menu entry", url="/test", current=True)])
-  <div xmlns="http://www.w3.org/1999/xhtml"
-        xmlns:py="http://genshi.edgewall.org">
-  <ul>
-    <li>
-    </li>
-  </ul>
+  <div>
+    <ul>
+      <li class="current">
+        <a href="/test">Menu entry</a>
+        <ul>
+  <BLANKLINE>
+    </ul>
+  <BLANKLINE>
+      </li>
+  <BLANKLINE>
+    </ul>
+  <BLANKLINE>
   </div>
   
 .. _py:with specs: http://genshi.edgewall.org/wiki/Documentation/0.4.x/xml-templates.html#py-with
